@@ -3,14 +3,13 @@ package com.bugzero.rarego.product.app;
 import static org.assertj.core.api.AssertionsForClassTypes.*;
 import static org.mockito.BDDMockito.*;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -25,6 +24,8 @@ import com.bugzero.rarego.shared.product.dto.ProductAuctionUpdateDto;
 import com.bugzero.rarego.shared.product.dto.ProductImageUpdateDto;
 import com.bugzero.rarego.shared.product.dto.ProductUpdateDto;
 import com.bugzero.rarego.shared.product.event.ProductUpdateAuctionEvent;
+import com.bugzero.rarego.shared.product.event.S3ImageConfirmEvent;
+import com.bugzero.rarego.shared.product.event.S3ImageDeleteEvent;
 import com.bugzero.rarego.shared.product.type.Category;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,12 +33,12 @@ class ProductUpdateProductUseCaseTest {
 
 	@Mock
 	private ProductSupport productSupport;
-
 	@Mock
-	private OutboxUseCase outboxUseCase; // 추가된 아웃박스 의존성
-
+	private OutboxUseCase outboxUseCase;
 	@Mock
 	private EventPublisher eventPublisher;
+	@Mock
+	private ProductSearchService productSearchService; // 추가된 의존성
 
 	@InjectMocks
 	private ProductUpdateProductUseCase useCase;
@@ -56,66 +57,108 @@ class ProductUpdateProductUseCaseTest {
 			.publicId(PUBLIC_ID)
 			.build();
 
+		// 실제 객체를 생성하고 id를 주입한 뒤 spy로 감쌈
 		Product product = Product.builder().name("기존 이름").build();
 		ReflectionTestUtils.setField(product, "id", PRODUCT_ID);
-
 		spyProduct = spy(product);
 	}
 
 	@Test
-	@DisplayName("성공: 상품 수정 시 이미지 이벤트가 발행되고 아웃박스에 경매 수정 이벤트가 저장된다")
+	@DisplayName("성공: 모든 과정(이미지 처리, 아웃박스 저장, ES 업데이트)이 정상 수행된다")
 	void updateProduct_success() {
 		// given
 		List<ProductImageUpdateDto> imageDtos = List.of(new ProductImageUpdateDto(null, "temp/new.jpg", 1));
 		ProductUpdateDto updateDto = createUpdateDto("수정된 이름", imageDtos);
 
-		List<String> deletePaths = List.of("products/old.jpg");
-		List<String> confirmPaths = List.of("temp/new.jpg");
-
 		given(productSupport.verifyValidateMember(PUBLIC_ID)).willReturn(commonSeller);
 		given(productSupport.verifyValidateProduct(PRODUCT_ID)).willReturn(spyProduct);
 		given(productSupport.normalizeUpdateImageOrder(anyList())).willReturn(imageDtos);
 
-		doReturn(deletePaths).when(spyProduct).removeOldImages(anyList());
-		doReturn(confirmPaths).when(spyProduct).processNewImages(anyList());
+		doReturn(List.of("old.jpg")).when(spyProduct).removeOldImages(anyList());
+		doReturn(List.of("new.jpg")).when(spyProduct).processNewImages(anyList());
 
 		// when
 		ProductUpdateResponseDto response = useCase.updateProduct(PUBLIC_ID, PRODUCT_ID, updateDto);
 
 		// then
-		// 1. 아웃박스 저장 검증 (가장 중요한 변경점)
-		ArgumentCaptor<ProductUpdateAuctionEvent> outboxCaptor = ArgumentCaptor.forClass(ProductUpdateAuctionEvent.class);
-		verify(outboxUseCase).saveOutbox(outboxCaptor.capture());
+		// 1. 이미지 이벤트 발행 확인
+		verify(eventPublisher).publish(any(S3ImageDeleteEvent.class));
+		verify(eventPublisher).publish(any(S3ImageConfirmEvent.class));
 
-		ProductUpdateAuctionEvent savedEvent = outboxCaptor.getValue();
-		assertThat(savedEvent.productId()).isEqualTo(PRODUCT_ID);
-		assertThat(savedEvent.publicId()).isEqualTo(PUBLIC_ID);
+		// 2. 아웃박스 저장 확인
+		verify(outboxUseCase).saveOutbox(any(ProductUpdateAuctionEvent.class));
 
-		// 2. S3 이미지 관련 이벤트 발행 검증
-		verify(eventPublisher, times(2)).publish(any());
+		// 3. ES 업데이트 호출 확인 (검수 전 상태 업데이트)
+		verify(productSearchService).updatedBeforeInspection(eq(spyProduct), any(), anyInt(), anyInt());
 
-		// 3. 결과 확인
 		assertThat(response.productId()).isEqualTo(PRODUCT_ID);
 	}
 
 	@Test
-	@DisplayName("실패: 유효하지 않은 상품일 경우 예외가 발생하고 아웃박스에 저장되지 않는다")
-	void updateProduct_fail_invalidProduct() {
+	@DisplayName("성공: ES 업데이트 중 예외가 발생해도 DB 트랜잭션과 이미지 이벤트는 정상 완료된다")
+	void updateProduct_success_evenIfEsFails() {
 		// given
-		ProductUpdateDto updateDto = createUpdateDto("이름", Collections.emptyList());
-
+		ProductUpdateDto updateDto = createUpdateDto("이름", List.of());
 		given(productSupport.verifyValidateMember(PUBLIC_ID)).willReturn(commonSeller);
-		// 상품 검증 단계에서 예외 발생 시뮬레이션
-		given(productSupport.verifyValidateProduct(PRODUCT_ID))
-			.willThrow(new IllegalArgumentException("존재하지 않는 상품입니다."));
+		given(productSupport.verifyValidateProduct(PRODUCT_ID)).willReturn(spyProduct);
 
-		// when & then
-		assertThatThrownBy(() -> useCase.updateProduct(PUBLIC_ID, PRODUCT_ID, updateDto))
-			.isInstanceOf(IllegalArgumentException.class);
+		// ES 예외 시뮬레이션
+		doThrow(new RuntimeException("ES Connection Timeout"))
+			.when(productSearchService).updatedBeforeInspection(any(), any(), anyInt(), anyInt());
 
-		// 검증: 아웃박스나 이벤트 발행이 호출되지 않아야 함
-		verifyNoInteractions(outboxUseCase);
-		verifyNoInteractions(eventPublisher);
+		// when
+		ProductUpdateResponseDto response = useCase.updateProduct(PUBLIC_ID, PRODUCT_ID, updateDto);
+
+		// then
+		// ES 에러와 상관없이 핵심 로직은 수행되어야 함
+		verify(outboxUseCase).saveOutbox(any());
+		verify(eventPublisher, atLeastOnce()).publish(any());
+		assertThat(response.productId()).isEqualTo(PRODUCT_ID);
+	}
+
+	@Nested
+	@DisplayName("상품 수정 실패 케이스")
+	class FailureCases {
+
+		@Test
+		@DisplayName("실패: 권한 체크(isAbleToChange)에서 실패하면 이후 로직이 중단된다")
+		void fail_not_allowed_to_change() {
+			// given
+			ProductUpdateDto updateDto = createUpdateDto("이름", List.of());
+			given(productSupport.verifyValidateMember(PUBLIC_ID)).willReturn(commonSeller);
+			given(productSupport.verifyValidateProduct(PRODUCT_ID)).willReturn(spyProduct);
+
+			// 권한 체크 실패 시뮬레이션
+			doThrow(new RuntimeException("권한 없음"))
+				.when(productSupport).isAbleToChange(commonSeller, spyProduct);
+
+			// when & then
+			assertThatThrownBy(() -> useCase.updateProduct(PUBLIC_ID, PRODUCT_ID, updateDto))
+				.isInstanceOf(RuntimeException.class);
+
+			// 중요: 권한 실패 시 이미지 변경이나 아웃박스 저장이 일어나면 안 됨
+			verify(spyProduct, never()).removeOldImages(any());
+			verify(outboxUseCase, never()).saveOutbox(any());
+			verify(productSearchService, never()).updatedBeforeInspection(any(), any(), anyInt(), anyInt());
+		}
+
+		@Test
+		@DisplayName("실패: 상품 저장 전 단계에서 예외 발생 시 ES 업데이트는 호출되지 않는다")
+		void fail_before_save_logic() {
+			// given
+			ProductUpdateDto updateDto = createUpdateDto("이름", List.of());
+			given(productSupport.verifyValidateMember(PUBLIC_ID)).willReturn(commonSeller);
+
+			// 상품 조회 단계부터 실패
+			given(productSupport.verifyValidateProduct(PRODUCT_ID))
+				.willThrow(new RuntimeException("상품 조회 실패"));
+
+			// when & then
+			assertThatThrownBy(() -> useCase.updateProduct(PUBLIC_ID, PRODUCT_ID, updateDto))
+				.isInstanceOf(RuntimeException.class);
+
+			verify(productSearchService, never()).updatedBeforeInspection(any(), any(), anyInt(), anyInt());
+		}
 	}
 
 	private ProductUpdateDto createUpdateDto(String name, List<ProductImageUpdateDto> images) {
